Change issues text colour to make it more readable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,5 +39,7 @@ body {
 }
 
 a {
-  color: $light-blue;
+  color: black;
+  font-weight: $font-weight-heavy;
+
 }
